--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "build": "netlify-lambda build express",
+    "start": "nodemon server-local.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,10 @@
     "mongoose": "^6.0.5",
     "nodemon": "^2.0.12",
     "stripe": "^8.174.0"
+  },
+  "devDependencies": {
+    "body-parser": "^1.20.0",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^3.0.1"
   }
 }
