--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "netlify-lambda build express",
-    "start": "nodemon server-local.js"
+    "start": "nodemon server-local.js",
+    "dev": "netlify-lambda serve express"
   },
   "keywords": [],
   "author": "",
