--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "netlify-lambda build express",
-    "dev": "netlify-lambda serve express"
+    "dev": "netlify-lambda serve express",
+    "seed": "node ./models/seeds/GameSeed.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "stripe": "^8.174.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "body-parser": "^1.20.0",
     "netlify-lambda": "^2.0.15",
     "serverless-http": "^3.0.1"
